# Capstone-2024-team-48

./: README.md
AES/: AES.c  AES_decryption.h  AES_encryption.h  CMakeLists.txt  Calculate.h  DataTypes.h  FileIO.h  README.md  Substitution.h
AES_128_CTR/: AES.c  AES_CTR_128_encrypt.txt  CMakeLists.txt  Conversion.h  README.md
AES_Lightweight_Algorithm/: AES128_CTR.h  AES128_Mixcolumns_Light.h  AES128_RemoveShift.h  AES128_beforehand.h  AES128_beforehand_light.h  CMakeLists.txt  Common_Calculate.h  README.md  main.c
ARIA/: README.md
ARIA/KAT/req/: ARIA128CBC.req  ARIA128CFB.req  ARIA128ECB.req
ARIA/KAT/rsp/: ARIA128CBC.rsp
ARIA/ref/: ARIA-reference-050117.c
ARIA/src/: 1_ARIA128ECB.c  2_ARIA128CBC.c  3_ARIA128CFB.c
ARIA/test128/: ARIA128(CBC)KAT.txt  ARIA128(CFB128)KAT.txt  ARIA128(ECB)KAT.txt
ECC/: ECC_final.c  README.md
ECC/ECC_5_mode/: ECC_CBC.c  ECC_CFB.c  ECC_CTR.c  ECC_ECB.c  ECC_GCM.c  ECC_OFB.c
QNX/: README.md  pingflooding.py
algorithm_lightweight_tool/: CMakeLists.txt  README.md
algorithm_lightweight_tool/Algorithm_Lightweight_tool/: CMakeLists.txt  main.c
algorithm_lightweight_tool/Algorithm_Lightweight_tool/headerFile/: AES_128_CTR.h  Conversion.h
